GNOME Bugzilla – Bug 631933
fix the plugins loading as org.gnome.settings-daemon is not defined.
Last modified: 2010-10-13 12:48:19 UTC
Created attachment 172149 [details] [review] add ".plugins" to the schema id for gsettings new gnome-settings-daemon fails to start due to trying to load "org.gnome.settings-daemon" without the suffix ".plugins". The former is not defined in the schemas.
The settings_prefix stuff needs to go away. There's no way that you could make the settings daemon run as expected if the GSettings schemas aren't installed properly, which makes the settings_prefix run-time setting useless.
Created attachment 172202 [details] [review] daemon: Remove use of settings_prefix And fix loading plugins information. Spotted by Alban Browaeys <prahal@yahoo.com>
Attachment 172202 [details] pushed as bd47948 - daemon: Remove use of settings_prefix