daemon: Remove use of settings_prefix

And fix loading plugins information.

Spotted by Alban Browaeys <prahal@yahoo.com>

https://bugzilla.gnome.org/show_bug.cgi?id=631933