gnome-settings-daemon/main.c
@@ -44,7 +44,6 @@
 #define GNOME_SESSION_DBUS_OBJECT    "/org/gnome/SessionManager"
 #define GNOME_SESSION_DBUS_INTERFACE "org.gnome.SessionManager"
 
-static char      *settings_prefix = NULL;
 static gboolean   no_daemon    = FALSE;
 static gboolean   debug        = FALSE;
 static gboolean   do_timed_exit = FALSE;
@@ -54,7 +53,6 @@ static int        term_signal_pipe_fds[2];
 static GOptionEntry entries[] = {
         {"debug", 0, 0, G_OPTION_ARG_NONE, &debug, N_("Enable debugging code"), NULL },
         {"no-daemon", 0, 0, G_OPTION_ARG_NONE, &no_daemon, N_("Don't become a daemon"), NULL },
-        {"settings-prefix", 0, 0, G_OPTION_ARG_STRING, &settings_prefix, N_("Settings prefix from which to load plugin settings"), NULL},
         { "timed-exit", 0, 0, G_OPTION_ARG_NONE, &do_timed_exit, N_("Exit after a time (for debugging)"), NULL },
         {NULL}
 };
@@ -481,11 +479,7 @@ main (int argc, char *argv[])
            automatically.  Otherwise, wait for an Awake etc. */
         if (g_getenv ("DBUS_STARTER_BUS_TYPE") == NULL) {
                 error = NULL;
-                if (settings_prefix != NULL) {
-                        res = gnome_settings_manager_start_with_settings_prefix (manager, settings_prefix, &error);
-                } else {
-                        res = gnome_settings_manager_start (manager, &error);
-                }
+                res = gnome_settings_manager_start (manager, &error);
                 if (! res) {
                         g_warning ("Unable to start: %s", error->message);
                         g_error_free (error);
@@ -502,8 +496,6 @@ main (int argc, char *argv[])
         gtk_main ();
 
  out:
-        g_free (settings_prefix);
-
         if (bus != NULL) {
                 dbus_g_connection_unref (bus);
         }
